Fix typo in img tag

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
       <h1>Nila Krachtin</h1>
     </header>
  
-      <img src="/images/octolace.jpg" alt="Octocat logo handcut out of Pewter" 
+      <img src="images/octolace.jpg" alt="Octocat logo handcut out of Pewter">
       <ul>
         <li><a href="http://github.com/niila">Github</a></li>
         <li><a href="http://www.linkedin.com/in/nilak">LinkedIn</a></li>
