--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 
           <h4>...and more:</h4>
        
-          <li><a href="http://pragmaticstudio.com/ruby#freebie">Best Ruby course for me:</a></li>
+          <li><a href="http://pragmaticstudio.com/ruby#freebie">Best Ruby course for me!</a></li>
           <li><a href="http://teamtreehouse.com/">Treehouse</a></li>
           <li><a href="http://www.codecademy.com/tracks/ruby">Codecademy</a></li>
           <li><a href="http://tryruby.org/levels/3/challenges/2">Try Ruby</a></li>
